[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "jit-python"
version = "0.1.0"
description = "Dynamically generate and improve Python methods at runtime using an AI agent."
requires-python = ">=3.11"
dependencies = [
    "google-adk>=2.1.0",
    "google-genai>=1.75.0",
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jit_python*"]
